# fhir-quirk-sim

./: .gitignore  LICENSE  MARKET_ANALYSIS.md  NOTICE  README.md  STATE.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  permissive.yaml  strict_epic.yaml
docs/: EPIC_QUIRKS.md  QUIRK_COVERAGE.md
scripts/: calibrate_fixtures.py  check_fixtures_synthetic.py  record_sandbox.py
src/epic_sim/: __init__.py  app.py  config.py  deps.py  errors.py  fixtures.py
src/epic_sim/auth/: __init__.py  authorize.py  bearer.py  context.py  jwks.py  store.py  token.py  well_known.py
src/epic_sim/quirks/: __init__.py  errors.py  extensions.py  references.py  resource_shape.py  search_params.py
src/epic_sim/record/: __init__.py  capture.py  normalize.py
src/epic_sim/routes/: fhir.py  metadata.py
src/fhir_proxy/: executor.py
src/fhir_proxy/deid/: freetext.py  html_stripper.py  structured.py  token_store.py
src/fhir_proxy/fhir_client/: __init__.py  base.py  epic_adapter.py  generic_adapter.py
src/fhir_proxy/models/: fetch_plan.py  sanitized_bundle.py
tests/auth/: conftest.py  test_authorization_code.py  test_backend_services.py  test_well_known.py
tests/compat/: conftest.py  test_epic_adapter_contract.py  test_epic_proxy_contract.py
tests/compat/fixtures/epic/: PROVENANCE.md  README.md  binary_forbidden_operation_outcome.json  binary_note_success.json  (+10 more)
tests/config/: test_config_loading.py
tests/http/: conftest.py  test_fhir_routes.py
tests/quirks/: test_http_integration.py  test_quirks.py
tests/record/: test_normalize.py
