[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epic-suite"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "presidio-analyzer>=2.2.355",
    "pydantic>=2.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.0",
    "spacy>=3.8.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_proxy", "src/epic_sim"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

